--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
             </div>
             <div class="content">
                 <h2 class="title">Welcome to Lambda Internet Exchange!</h2>
-                <p>Lambda Internet Exchange resides in G/F of Edwick Industrial Center. To connect, you can:
-                    <ul>
-                        <li>A new, segmented, not-for-profit Internet Exchange Point (IXP) in Fremont, US. Lambda Internet Exchange was created to provide a low-barrier, easy to access Internet Exchange in the US which improves routing performance for all
-                            installed parties.</li>
-                        <li>As of September 2021 we are now accepting 1G/10Gbps connections at the Hurricane Electric FMT2 datacenter. You must supply your own optic to connect. Details in our <a href="faq.html">FAQ</a>.</li>
-                    </ul>
+                <ul>
+                    <li>A new, segmented, not-for-profit Internet Exchange Point (IXP) in Fremont, US. Lambda Internet Exchange was created to provide a low-barrier, easy to access Internet Exchange in the US which improves routing performance for all installed
+                        parties.</li>
+                    <li>As of September 2021 we are now accepting 1G/10Gbps connections at the Hurricane Electric FMT2 datacenter. You must supply your own optic to connect. Details in our <a href="faq.html">FAQ</a>.</li>
+                </ul>
                 </p>
             </div>
             <div class="footer">&copy; 2021 Lambda Internet Exchange. All rights reserved.</div>
