--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
                 <ul>
                     <li>A new, segmented, not-for-profit Internet Exchange Point (IXP) in Fremont, US. Lambda Internet Exchange was created to provide a low-barrier, easy to access Internet Exchange in the US which improves routing performance for all installed
                         parties.</li>
-                    <li>As of September 2021 we are now accepting 1G/10Gbps connections at the Hurricane Electric FMT2 datacenter. You must supply your own optic to connect. Details in our <a href="faq.html">FAQ</a>.</li>
+                    <li>As of September 2021 we are now accepting 1G/10Gbps connections at the Hurricane Electric FMT2 datacenter. You must supply your own optic to connect. Details in our FAQ.</li>
                 </ul>
                 </p>
+                <h3 class="title"><a href="faq.html">Frequently Asked Questions</a></h3>
+                <h4 class="title"><a href="connect.html">Connect to Lambda Internet Exchange</a></h4>
+                <h5 class="title"><a href="peers.html">Peers</a></h5>
             </div>
             <div class="footer">&copy; 2021 Lambda Internet Exchange. All rights reserved.</div>
         </div>
