--- a/connect.html
+++ b/connect.html
@@ -16,7 +16,7 @@
                 <h1 class="title">Lambda Internet Exchange</h1>
             </div>
             <div class="content">
-                <h2 class="title">Connect to Lambda Internet Exchange</h2>
+                <h2 class="title">A couple of requirements</h2>
                 <p>Great! We'd be happy to have you! We just need a couple of simple rules:
                     <ul>
                         <li>You must have an ASN and IPv4/IPv6 space allocation from a registered RIR</li>
@@ -30,10 +30,10 @@
                 <h2>Getting connected</h2>
                 <p></p>
                 <ul>
-                    <li>Assuming you meet these requirements and can get a physical cross-connect to our switches, send an email to noc@august.tw with your ASN, AS-SET and desired connection type.</li>
-                    <li>Lambda Internet Exchange currently does not charge a port fee, however, depending on your colocation contract your datacenter may charge you a cross-connect fee to our switch. Please reach out to your datacenter sales for any questions.</li>
+                    <li>Assuming you meet these requirements and can get a physical cross-connect to our switch, send an email to noc@august.tw with your ASN, AS-SET and desired connection type.</li>
+                    <li>Lambda Internet Exchange currently does not charge a port fee, however, depending on colocation contract your datacenter may charge you a cross-connect fee to our switch. Please reach out to your datacenter sales for any questions.</li>
                     <li>Although not a requirement, you are encouraged to update your PeeringDB profile and list Lambda Internet Exchange as a new public peering point.</li>
-                    <li>You may also consider peering with our route server, as the route server will give you the routing table for all connected peers without establishing bilateral peering sessions with all networks on the exchange.</li>
+                    <li>You may also consider peering with our route server, as it will give you the routing table for all connected peers without establishing bilateral peering sessions with all networks on the exchange.</li>
                 </ul>
             </div>
             <div class="footer">&copy; 2021 Lambda Internet Exchange. All rights reserved.</div>
