--- a/connect.html
+++ b/connect.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <div class="main">
             <div class="header">
-                <h1 class="title">Lambda Internet Exchange</h1>
+                <h1 class="title"><a href="/" style="color: inherit; text-decoration: none">Lambda Internet Exchange</a></h1>
             </div>
             <div class="content">
                 <h2 class="title">A couple of requirements</h2>
