--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h4 class="title"><a href="connect.html">Connect to Lambda Internet Exchange</a></h4>
                 <h5 class="title"><a href="peers.html">Peers</a></h5>
             </div>
-            <div class="footer">&copy; 2021 Lambda Internet Exchange. All rights reserved.</div>
+            <div class="footer">&copy; 2021 <a href="thanks.html">Lambda Internet Exchange</a>. All rights reserved.</div>
         </div>
     </div>
 </body>
