--- a/connect.html
+++ b/connect.html
@@ -36,7 +36,7 @@
                     <li>You may also consider peering with our route server, as it will give you the routing table for all connected peers without establishing bilateral peering sessions with all networks on the exchange.</li>
                 </ul>
             </div>
-            <div class="footer">&copy; 2021 Lambda Internet Exchange. All rights reserved.</div>
+            <div class="footer">&copy; 2021 <a href="thanks.html">Lambda Internet Exchange</a>. All rights reserved.</div>
         </div>
     </div>
 </body>
