--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 <h2 class="title">Welcome to Lambda Internet Exchange!</h2>
                 <ul>
                     <li>A new, segmented, not-for-profit Internet Exchange Point (IXP) in Fremont, US. Lambda Internet Exchange was created to provide a low-barrier, easy to access Internet Exchange in the US which improves routing performance for all installed
-                        parties.</li>
-                    <li>As of September 2021 we are now accepting 1G/10Gbps connections at the Hurricane Electric FMT2 datacenter. You must supply your own optic to connect. Details in our FAQ.</li>
+                        parties.
+                    </li>
+                    <li>As of September 2021 we are now accepting 1G/10Gbps connections at the Hurricane Electric FMT2 datacenter. You must supply your own optic to connect.</li>
                 </ul>
                 </p>
-                <h3 class="title"><a href="faq.html">Frequently Asked Questions</a></h3>
-                <h4 class="title"><a href="connect.html">Connect to Lambda Internet Exchange</a></h4>
-                <h5 class="title"><a href="peers.html">Peers</a></h5>
+                <p><a href="connect.html">Connect to Lambda Internet Exchange</a></p>
+                <p><a href="peers.html">Peers</a></p>
             </div>
             <div class="footer">&copy; 2021 <a href="thanks.html">Lambda Internet Exchange</a>. All rights reserved.</div>
         </div>
