--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p><a href="connect.html">Connect to Lambda Internet Exchange</a></p>
                 <p><a href="peers.html">Peers</a></p>
             </div>
-            <div class="footer">&copy; 2021 <a href="thanks.html">Lambda Internet Exchange</a>. All rights reserved.</div>
+            <div class="footer">&copy; 2021 <a href="/">Lambda Internet Exchange</a>. All rights reserved.</div>
         </div>
     </div>
 </body>
