--- a/peers.html
+++ b/peers.html
@@ -76,7 +76,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="footer">&copy; 2021 <a href="thanks.html">Lambda Internet Exchange</a>. All rights reserved.</div>
+            <div class="footer">&copy; 2021 <a href="/">Lambda Internet Exchange</a>. All rights reserved.</div>
         </div>
     </div>
 </body>
