--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta charset="UTF-8">
     <meta name="description" content="Lambda Internet Exchange">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css?v=1">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
     <div class="wrapper">
         <div class="main">
             <div class="header">
-                <h1 class="title">Lambda Internet Exchange</h1>
+                <h1 class="h1_title">Lambda Internet Exchange</h1>
             </div>
             <div class="content">
                 <h2 class="title">Welcome to Lambda Internet Exchange!</h2>
@@ -23,9 +23,11 @@
                     </li>
                     <li>As of September 2021 we are now accepting 1G/10Gbps connections at the Hurricane Electric FMT2 datacenter. You must supply your own optic to connect.</li>
                 </ul>
-                </p>
+                <p></p>
                 <p><a href="connect.html">Connect to Lambda Internet Exchange</a></p>
                 <p><a href="peers.html">Peers</a></p>
+                <p><a href="thanks.html">Special Thanks</a></p>
+                <p><a href="faq.html">Frequently Asked Questions</a></p>
             </div>
             <div class="footer">&copy; 2021 <a href="/">Lambda Internet Exchange</a>. All rights reserved.</div>
         </div>
