--- a/peers.html
+++ b/peers.html
@@ -6,21 +6,21 @@
     <meta charset="UTF-8">
     <meta name="description" content="Lambda Internet Exchange">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css?v=1">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
     <div class="wrapper">
         <div class="main">
             <div class="header">
-                <h1 class="title">Lambda Internet Exchange</h1>
+                <h1 class="h1_title">Lambda Internet Exchange</h1>
             </div>
             <div class="content">
                 <h2 class="title">Members</h2>
                 <table>
                     <tbody>
                         <tr>
-                            <th>Member</th>
+                            <th>Name</th>
                             <th>ASN</th>
                             <th>IPv4</th>
                             <th>IPv6</th>
@@ -60,6 +60,24 @@
                             <th>212534</th>
                             <th></th>
                             <th>2a0f:607:1070::6</th>
+                        </tr>
+                        <tr>
+                            <th>Haraguroicha Hsu</th>
+                            <th>212359</th>
+                            <th></th>
+                            <th>2a0f:607:1070::7</th>
+                        </tr>
+                        <tr>
+                            <th>Little Moe LLC</th>
+                            <th>43126</th>
+                            <th></th>
+                            <th>2a0f:607:1070::8</th>
+                        </tr>
+                        <tr>
+                            <th>Black Mesa Corporation</th>
+                            <th>46997</th>
+                            <th></th>
+                            <th>2a0f:607:1070::9</th>
                         </tr>
                         <tr>
                             <th>Route Server 1</th>
