--- a/connect.html
+++ b/connect.html
@@ -6,14 +6,14 @@
     <meta charset="UTF-8">
     <meta name="description" content="Lambda Internet Exchange">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css?v=1">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
     <div class="wrapper">
         <div class="main">
             <div class="header">
-                <h1 class="title"><a href="/" style="color: inherit">Lambda Internet Exchange</a></h1>
+                <h1 class="h1_title">Lambda Internet Exchange</h1>
             </div>
             <div class="content">
                 <h2 class="title">A couple of requirements</h2>
@@ -30,8 +30,9 @@
                 <h2>Getting connected</h2>
                 <p></p>
                 <ul>
-                    <li>Assuming you meet these requirements and can get a physical cross-connect to our switch, send an email to noc@august.tw with your ASN, AS-SET and desired connection type.</li>
-                    <li>Lambda Internet Exchange currently does not charge a port fee, however, depending on colocation contract your datacenter may charge you a cross-connect fee to our switch. Please reach out to your datacenter sales for any questions.</li>
+                    <li>Assuming you meet these requirements and can get a physical cross-connect to our switch, send an email to noc@lambda-ix.net with your ASN, AS-SET and desired connection type.</li>
+                    <li>Lambda Internet Exchange currently does not charge a port fee, however, depending on the colocation contract your datacenter may charge you a cross-connect fee to our switch. Please reach out to your Data Center sales of our Service
+                        Provider - <a href="https://apernet.io/">AperNet</a> for any questions.</li>
                     <li>Although not a requirement, you are encouraged to update your PeeringDB profile and list Lambda Internet Exchange as a new public peering point.</li>
                     <li>You may also consider peering with our route server, as it will give you the routing table for all connected peers without establishing bilateral peering sessions with all networks on the exchange.</li>
                 </ul>
