--- a/thanks.html
+++ b/thanks.html
@@ -16,7 +16,7 @@
                 <h1 class="h1_title">Lambda Internet Exchange</h1>
             </div>
             <div class="content">
-                <h2 class="h1_title">Maintainer</h2>
+                <h2 class="h1_title">Maintainers</h2>
                 <ul>
                     <li>SteveYi</li>
                     <li>August</li>
