--- a/connect.html
+++ b/connect.html
@@ -34,7 +34,7 @@
                     <li>Lambda Internet Exchange currently does not charge a port fee, however, depending on the colocation contract your datacenter may charge you a cross-connect fee to our switch. Please reach out to our Service Provider - <a href="https://apernet.io/">AperNet</a> for
                         any questions.</li>
                     <li>Although not a requirement, you are encouraged to update your PeeringDB profile and list Lambda Internet Exchange as a new public peering point.</li>
-                    <li>You may also consider peering with our route server, as it will give you the routing table for all connected peers without establishing bilateral peering sessions with all networks on the exchange.</li>
+                    <li>You may also consider peering with our route servers, as it will give you the routing table for all connected peers without establishing bilateral peering sessions with all networks on the exchange.</li>
                 </ul>
             </div>
             <div class="footer">&copy; 2021 <a href="/">Lambda Internet Exchange</a>. All rights reserved.</div>
