--- a/faq.html
+++ b/faq.html
@@ -25,12 +25,12 @@
                 <h2 class="title">How much does it cost?</h2>
                 <p>We are not charging port fees.</p>
                 <h2 class="title">Does the Route Server implement filtering?</h2>
-                <p>Yes. Our route server supports strict IRRDB filtering and have strict prefix limits to prevent invalid routes from entering participants’ routing tables.</p>
+                <p>Yes. Our route servers support strict IRRDB filtering and have strict prefix limits to prevent invalid routes from entering participants’ routing tables.</p>
                 <h2 class="title">What prefixes do you use?</h2>
                 <p>
                     We currently use the following prefixes on the peering VLAN:
                     <ul>
-                        <li>IPv4: 0.0.0.0/24</li>
+                        <li>IPv4: TBA (Waiting for RIR Allocation)</li>
                         <li>IPv6: 2a0f:607:1070::/64</li>
                     </ul>
                 </p>
@@ -38,8 +38,8 @@
                 <p>Yes! Our PeeringDB page is: https://www.peeringdb.com/ix/3634 and we can also be found on Hurricane Electric’s BGP Toolkit.</p>
                 <h2 class="title">Do you have a looking glass?</h2>
                 <p>TBA</p>
-                <h2 class="title">What Routing Daemon do you use?</h2>
-                <p>We use FRRouting to power our route server, which is a widely adopted routing engine used on IX’s around the world.</p>
+                <h2 class="title">What routing daemon do you use?</h2>
+                <p>We use FRRouting to power our route servers, which is a widely adopted routing engine used on IX’s around the world.</p>
             </div>
             <div class="footer">&copy; 2021 <a href="/">Lambda Internet Exchange</a>. All rights reserved.</div>
         </div>
