--- a/connect.html
+++ b/connect.html
@@ -31,7 +31,7 @@
                 <p></p>
                 <ul>
                     <li>Assuming you meet these requirements and can get a physical cross-connect to our switch, send an email to noc@lambda-ix.net with your ASN, AS-SET and desired connection type.</li>
-                    <li>Lambda Internet Exchange currently does not charge a port fee, however, depending on the colocation contract your datacenter may charge you a cross-connect fee to our switch. Please reach out to our Service Provider - <a href="https://apernet.io/">AperNet</a> for
+                    <li>Lambda Internet Exchange currently does not charge a port fee, however, depending on the colocation contract your datacenter may charge you a cross-connect fee to our switch. Please reach out to our service provider - <a href="https://apernet.io/">AperNet</a> for
                         any questions.</li>
                     <li>Although not a requirement, you are encouraged to update your PeeringDB profile and list Lambda Internet Exchange as a new public peering point.</li>
                     <li>You may also consider peering with our route servers, as it will give you the routing table for all connected peers without establishing bilateral peering sessions with all networks on the exchange.</li>
