--- a/faq.html
+++ b/faq.html
@@ -24,13 +24,13 @@
                 <p>Right now we have one switch available for cross connects - located at the Hurricane Electric FMT2 datacenter.</p>
                 <h2 class="title">How much does it cost?</h2>
                 <p>We are not charging port fees.</p>
-                <h2 class="title">Does the Route Server implement filtering?</h2>
+                <h2 class="title">Do the route servers implement filtering?</h2>
                 <p>Yes. Our route servers support strict IRRDB filtering and have strict prefix limits to prevent invalid routes from entering participants’ routing tables.</p>
                 <h2 class="title">What prefixes do you use?</h2>
                 <p>
                     We currently use the following prefixes on the peering VLAN:
                     <ul>
-                        <li>IPv4: TBA (Waiting for RIR Allocation)</li>
+                        <li>IPv4: TBA (Awaiting RIR Allocation)</li>
                         <li>IPv6: 2a0f:607:1070::/64</li>
                     </ul>
                 </p>
