--- a/peers.html
+++ b/peers.html
@@ -80,6 +80,12 @@
                             <th>2a0f:607:1070::9</th>
                         </tr>
                         <tr>
+                            <th>Low End Network</th>
+                            <th>210872</th>
+                            <th></th>
+                            <th>2a0f:607:1070::10</th>
+                        </tr>
+                        <tr>
                             <th>Route Server 1</th>
                             <th>51930</th>
                             <th></th>
