--- a/peers.html
+++ b/peers.html
@@ -26,7 +26,7 @@
                             <th>IPv6</th>
                         </tr>
                         <tr>
-                            <th>Haonan Yang</th>
+                            <th>August Internet</th>
                             <th>38308</th>
                             <th></th>
                             <th>2a0f:607:1070::1</th>
@@ -38,7 +38,7 @@
                             <th>2a0f:607:1070::2</th>
                         </tr>
                         <tr>
-                            <th>Kazuki Yamaguchi</th>
+                            <th>RHE-NET</th>
                             <th>51044</th>
                             <th></th>
                             <th>2a0f:607:1070::3</th>
@@ -62,7 +62,7 @@
                             <th>2a0f:607:1070::6</th>
                         </tr>
                         <tr>
-                            <th>Haraguroicha Hsu</th>
+                            <th>Haraguroicha Internet Service</th>
                             <th>212359</th>
                             <th></th>
                             <th>2a0f:607:1070::7</th>
@@ -84,6 +84,12 @@
                             <th>210872</th>
                             <th></th>
                             <th>2a0f:607:1070::10</th>
+                        </tr>
+                        <tr>
+                            <th>MrSheepNET LTD</th>
+                            <th>211323</th>
+                            <th></th>
+                            <th>2a0f:607:1070::11</th>
                         </tr>
                         <tr>
                             <th>Route Server 1</th>
