--- a/peers.html
+++ b/peers.html
@@ -92,6 +92,12 @@
                             <th>2a0f:607:1070::11</th>
                         </tr>
                         <tr>
+                            <th>Jimmy Pan</th>
+                            <th>212360</th>
+                            <th>23.191.16.12</th>
+                            <th>2a0f:607:1070::12</th>
+                        </tr>
+                        <tr>
                             <th>Route Server 1</th>
                             <th>51930</th>
                             <th>23.191.16.253</th>
