--- a/peers.html
+++ b/peers.html
@@ -98,6 +98,18 @@
                             <th>2a0f:607:1070::12</th>
                         </tr>
                         <tr>
+                            <th>SteveYi Network Service</th>
+                            <th>60614</th>
+                            <th>23.191.16.13</th>
+                            <th>2a0f:607:1070::13</th>
+                        </tr>
+                        <tr>
+                            <th>Cloudie Networks</th>
+                            <th>60438</th>
+                            <th>23.191.16.14</th>
+                            <th>2a0f:607:1070::14</th>
+                        </tr>
+                        <tr>
                             <th>Route Server 1</th>
                             <th>51930</th>
                             <th>23.191.16.253</th>
