--- a/faq.html
+++ b/faq.html
@@ -39,7 +39,7 @@
                 <h2 class="title">Do you have a looking glass?</h2>
                 <p>TBA</p>
                 <h2 class="title">What routing daemon do you use?</h2>
-                <p>We use FRRouting to power our route servers, which is a widely adopted routing engine used on IX’s around the world.</p>
+                <p>We use bird to power our route servers, which is a widely adopted routing engine used on IX’s around the world.</p>
             </div>
             <div class="footer">&copy; 2021 <a href="/">Lambda Internet Exchange</a>. All rights reserved.</div>
         </div>
