--- a/peers.html
+++ b/peers.html
@@ -27,11 +27,7 @@
                         </tr>
                         <tr>
                             <th>August Internet</th>
-<<<<<<< HEAD
-                            <th>64199</th>
-=======
-                            <th>AS7719</th>
->>>>>>> 505d15518a3635f5f07463ac2abc9c8c862e06cd
+                            <th>7719</th>
                             <th>149.112.26.1</th>
                             <th>2a0f:607:1070::1</th>
                         </tr>
@@ -102,8 +98,8 @@
                             <th>2a0f:607:1070::12</th>
                         </tr>
                         <tr>
-                            <th>SteveYi Network Service</th>
-                            <th>60614</th>
+                            <th>Hurricane Electric</th>
+                            <th>6939</th>
                             <th>149.112.26.13</th>
                             <th>2a0f:607:1070::13</th>
                         </tr>
@@ -112,6 +108,18 @@
                             <th>60438</th>
                             <th>149.112.26.14</th>
                             <th>2a0f:607:1070::14</th>
+                        </tr>
+                        <tr>
+                            <th>Keaton Alexander Guger Lair</th>
+                            <th>50555</th>
+                            <th>149.112.26.15</th>
+                            <th>2a0f:607:1070::15</th>
+                        </tr>
+                        <tr>
+                            <th>Fubuki Network (edisonlee55 Network)</th>
+                            <th>212425</th>
+                            <th>149.112.26.16</th>
+                            <th>2a0f:607:1070::16</th>
                         </tr>
                         <tr>
                             <th>Route Server 1</th>
