--- a/peers.html
+++ b/peers.html
@@ -122,6 +122,12 @@
                             <th>2a0f:607:1070::16</th>
                         </tr>
                         <tr>
+                            <th>DNS-OARC-112</th>
+                            <th>112</th>
+                            <th>149.112.26.252</th>
+                            <th>2a0f:607:1070::252</th>
+                        </tr>
+                        <tr>
                             <th>Route Server 1</th>
                             <th>51930</th>
                             <th>149.112.26.253</th>
