--- a/peers.html
+++ b/peers.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
 </head>
+<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 
 <body>
     <div class="wrapper">
@@ -15,7 +16,7 @@
             <div class="header">
                 <h1 class="h1_title">Lambda Internet Exchange</h1>
             </div>
-            <div class="content">
+            <div class="content" id="app">
                 <h2 class="title">Members</h2>
                 <table>
                     <tbody>
@@ -25,119 +26,11 @@
                             <th>IPv4</th>
                             <th>IPv6</th>
                         </tr>
-                        <tr>
-                            <th>August Internet</th>
-                            <th>7719</th>
-                            <th>149.112.26.1</th>
-                            <th>2a0f:607:1070::1</th>
-                        </tr>
-                        <tr>
-                            <th>Internet Technology Laboratory</th>
-                            <th>38254</th>
-                            <th>149.112.26.2</th>
-                            <th>2a0f:607:1070::2</th>
-                        </tr>
-                        <tr>
-                            <th>RHE-NET</th>
-                            <th>51044</th>
-                            <th>149.112.26.3</th>
-                            <th>2a0f:607:1070::3</th>
-                        </tr>
-                        <tr>
-                            <th>SteveYi Network Service</th>
-                            <th>60614</th>
-                            <th>149.112.26.4</th>
-                            <th>2a0f:607:1070::4</th>
-                        </tr>
-                        <tr>
-                            <th>Yu-Cheng Kuo</th>
-                            <th>210932</th>
-                            <th>149.112.26.5</th>
-                            <th>2a0f:607:1070::5</th>
-                        </tr>
-                        <tr>
-                            <th>Chan-Chun Yen</th>
-                            <th>212534</th>
-                            <th>149.112.26.6</th>
-                            <th>2a0f:607:1070::6</th>
-                        </tr>
-                        <tr>
-                            <th>Haraguroicha Internet Service</th>
-                            <th>212359</th>
-                            <th>149.112.26.7</th>
-                            <th>2a0f:607:1070::7</th>
-                        </tr>
-                        <tr>
-                            <th>Little Moe LLC</th>
-                            <th>43126</th>
-                            <th>149.112.26.8</th>
-                            <th>2a0f:607:1070::8</th>
-                        </tr>
-                        <tr>
-                            <th>Black Mesa Corporation</th>
-                            <th>46997</th>
-                            <th>149.112.26.9</th>
-                            <th>2a0f:607:1070::9</th>
-                        </tr>
-                        <tr>
-                            <th>Low End Network</th>
-                            <th>210872</th>
-                            <th>149.112.26.10</th>
-                            <th>2a0f:607:1070::10</th>
-                        </tr>
-                        <tr>
-                            <th>MrSheepNET LTD</th>
-                            <th>211323</th>
-                            <th>149.112.26.11</th>
-                            <th>2a0f:607:1070::11</th>
-                        </tr>
-                        <tr>
-                            <th>Jimmy Pan</th>
-                            <th>212360</th>
-                            <th>149.112.26.12</th>
-                            <th>2a0f:607:1070::12</th>
-                        </tr>
-                        <tr>
-                            <th>Hurricane Electric</th>
-                            <th>6939</th>
-                            <th>149.112.26.13</th>
-                            <th>2a0f:607:1070::13</th>
-                        </tr>
-                        <tr>
-                            <th>Cloudie Networks</th>
-                            <th>60438</th>
-                            <th>149.112.26.14</th>
-                            <th>2a0f:607:1070::14</th>
-                        </tr>
-                        <tr>
-                            <th>Keaton Alexander Guger Lair</th>
-                            <th>50555</th>
-                            <th>149.112.26.15</th>
-                            <th>2a0f:607:1070::15</th>
-                        </tr>
-                        <tr>
-                            <th>Fubuki Network (edisonlee55 Network)</th>
-                            <th>212425</th>
-                            <th>149.112.26.16</th>
-                            <th>2a0f:607:1070::16</th>
-                        </tr>
-                        <tr>
-                            <th>DNS-OARC-112</th>
-                            <th>112</th>
-                            <th>149.112.26.252</th>
-                            <th>2a0f:607:1070::252</th>
-                        </tr>
-                        <tr>
-                            <th>Route Server 1</th>
-                            <th>51930</th>
-                            <th>149.112.26.253</th>
-                            <th>2a0f:607:1070::253</th>
-                        </tr>
-                        <tr>
-                            <th>Route Server 2</th>
-                            <th>51930</th>
-                            <th>149.112.26.254</th>
-                            <th>2a0f:607:1070::254</th>
+                        <tr v-for="(value, key) in members_data">
+                            <th>{{ value.name }}</th>
+                            <th>{{ value.asn }}</th>
+                            <th>{{ value.ipv4 }}</th>
+                            <th>{{ value.ipv6 }}</th>
                         </tr>
                     </tbody>
                 </table>
@@ -145,6 +38,24 @@
             <div class="footer">&copy; 2021 <a href="/">Lambda Internet Exchange</a>. All rights reserved.</div>
         </div>
     </div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js'></script>
+    <script>
+        new Vue({
+            el: '#app',
+            data() {
+                return {
+                    members_data: {},
+                }
+            },
+            mounted() {
+                axios
+                    .get('./members.json')
+                    .then(response => {
+                        this.members_data = response.data
+                    })
+            }
+        })
+    </script>
 </body>
 
 </html>
